# orbital_scene_description

./: .gitignore  pyproject.toml
docs/: index.html  script.js
instance/: scene.json  spacecraft.json
orbital_scene_description/: core.py  scene.py  spacecraft.py
schema/: scene.json  spacecraft.json  types.json
test/: test_schema.py
