[tool.poetry]
name = "orbital-scene-description"
version = "0.1.0"
description = "Language and toolset to describe orbital scenes"
authors = ["SuperSocialForce"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
